images added & swagger docs deduct error
